--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeNamr CLI Installation</title>
+    <title>Codenamr CLI Installation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -97,8 +97,8 @@
 </head>
 <body>
     <div class="card">
-        <h1>Install CodeNamr CLI</h1>
-        <p>CodeNamr is a tool for generating memorable code names in various formats.</p>
+        <h1>Install Codenamr CLI</h1>
+        <p>Codenamr is a tool for generating memorable code names in various formats.</p>
         <h2>Installation</h2>
         <p>Run this command in your terminal:</p>
         <pre><code>curl -fsSL https://codenamr.vercel.app/install.sh | bash</code></pre>
