--- a/website/index.html
+++ b/website/index.html
@@ -207,8 +207,8 @@
             <h2>Install</h2>
             <p>Run this command in your terminal:</p>
             <div class="command-block">
-                <code>curl -fsSL https://codenamr.vercel.app/install.sh | bash</code>
-                <button onclick="copyCommand(this, 'curl -fsSL https://codenamr.vercel.app/install.sh | bash')">Copy</button>
+                <code>curl -fsSL https://codenamr.vercel.app/codenamr.sh | bash -s -- install</code>
+                <button onclick="copyCommand(this, 'curl -fsSL https://codenamr.vercel.app/codenamr.sh | bash -s -- install')">Copy</button>
             </div>
         </div>
 
@@ -216,8 +216,8 @@
             <h2>Update</h2>
             <p>To update to the latest version:</p>
             <div class="command-block">
-                <code>curl -fsSL https://codenamr.vercel.app/update.sh | bash</code>
-                <button onclick="copyCommand(this, 'curl -fsSL https://codenamr.vercel.app/update.sh | bash')">Copy</button>
+                <code>curl -fsSL https://codenamr.vercel.app/codenamr.sh | bash -s -- update</code>
+                <button onclick="copyCommand(this, 'curl -fsSL https://codenamr.vercel.app/codenamr.sh | bash -s -- update')">Copy</button>
             </div>
         </div>
 
@@ -225,8 +225,8 @@
             <h2>Uninstall</h2>
             <p>To uninstall:</p>
             <div class="command-block">
-                <code>curl -fsSL https://codenamr.vercel.app/uninstall.sh | bash</code>
-                <button onclick="copyCommand(this, 'curl -fsSL https://codenamr.vercel.app/uninstall.sh | bash')">Copy</button>
+                <code>curl -fsSL https://codenamr.vercel.app/codenamr.sh | bash -s -- uninstall</code>
+                <button onclick="copyCommand(this, 'curl -fsSL https://codenamr.vercel.app/codenamr.sh | bash -s -- uninstall')">Copy</button>
             </div>
         </div>
 
